
virtualbox (5.1.8-dfsg-2) unstable; urgency=medium

  * Fix a build failure with newer gcc.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 19 Oct 2016 18:03:27 +0200

virtualbox (5.1.8-dfsg-1) unstable; urgency=medium

  * New upstream release.
    - builds with new openssl 1.1 (Closes: #828593)
    - fix double snapshot deletion crash (Closes: #838766)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 19 Oct 2016 00:12:38 +0200

virtualbox (5.1.6-dfsg-2) unstable; urgency=medium

  * Tweak description to mention that dkms and source are
    mutually exclusive (Closes: #634042)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 14 Sep 2016 08:43:10 +0200

virtualbox (5.1.6-dfsg-1) unstable; urgency=medium

  * New upstream release, patch refresh.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 13 Sep 2016 08:07:31 +0200

virtualbox (5.1.4-dfsg-4) unstable; urgency=low

  * Try to add VBox missing binaries (LP: #1621890).
  * Merge the VBox.sh with the upstream one

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 09 Sep 2016 16:38:26 +0200

virtualbox (5.1.4-dfsg-3) unstable; urgency=low

  * Revert to Python2, building with Python3 seems still not supported
    even if at runtime it might work.

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 08 Sep 2016 11:39:40 +0200

virtualbox (5.1.4-dfsg-2) unstable; urgency=low

  * Switch to Python3 (LP: #1528016, Closes: #830878)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 26 Aug 2016 09:51:07 +0200

virtualbox (5.1.4-dfsg-1) unstable; urgency=low

  * New upstream major release, patch refresh.
  * Update dependencies to qt5
  * Regenerate manpages
  * Fix gcc version check for gcc-6.x
  * Only suggest the guest-x11 from the guest-utils package.
    (Closes: #834965)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Wed, 17 Aug 2016 10:33:49 +0200

virtualbox (5.0.24-dfsg-2) unstable; urgency=medium
