@@ -56,7 +56,7 @@ Build-Depends: bzip2,
                lynx-cur,
                makeself,
                module-assistant,
-               python-dev (>= 2.6.6-3~),
+               python3-dev,
                texlive-fonts-extra,
                texlive-fonts-recommended,
                texlive-latex-extra,
@@ -92,7 +92,7 @@ Depends: adduser,
          procps,
          virtualbox-dkms (>= ${source:Version}) | virtualbox-source (>= ${source:Version}) | virtualbox-modules,
          ${misc:Depends},
-         ${python:Depends},
+         ${python3:Depends},
          ${shlibs:Depends}
 Recommends: virtualbox-qt (= ${binary:Version}), ${shlibs:Recommends}
 Suggests: vde2, virtualbox-guest-additions-iso
